iac/kustomize/acruet/base/deployment-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: acruet-user
  namespace: acruet
  labels:
    app: acruet-user
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: acruet-user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acruet-user
  namespace: acruet
  labels:
    app: acruet-user
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: acruet-user
      version: v1
  template:
    metadata:
      labels:
        app: acruet-user
        version: v1
    spec:
      containers:
        - name: acruet-user
          image: sbwise/acruet-user:0.1.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 1Gi
