iac/kustomize/acruet/base/httproute-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: acruet-admin
  namespace: acruet
  annotations:
    index.home.bradandmarsha.com/enabled: "true"
    index.home.bradandmarsha.com/name: "A Cruet Admin"
    index.home.bradandmarsha.com/image: "https://media.home.bradandmarsha.com/media/acruet-bw.jpg"
    index.home.bradandmarsha.com/description: "Administrator console for A Cruet"
    index.home.bradandmarsha.com/weight: "16"
spec:
  parentRefs:
    - name: gateway-internal
      namespace: kgateway-system
      sectionName: https-wildcard
  hostnames:
    - acruet-admin.home.bradandmarsha.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: acruet-admin
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: acruet-admin-https-redirect
  namespace: acruet
spec:
  parentRefs:
    - name: gateway-internal
      namespace: kgateway-system
      sectionName: http
  hostnames:
    - acruet-admin.home.bradandmarsha.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
