iac/kustomize/acruet/base/httproute-user.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: acruet-user
  namespace: acruet
  annotations:
    index.home.bradandmarsha.com/enabled: "true"
    index.home.bradandmarsha.com/name: "A Cruet"
    index.home.bradandmarsha.com/image: "https://media.home.bradandmarsha.com/media/acruet-bw.jpg"
    index.home.bradandmarsha.com/description: "Envelope-budgeting web application"
    index.home.bradandmarsha.com/weight: "15"
spec:
  parentRefs:
    - name: gateway-public
      namespace: kgateway-system
      sectionName: https-wildcard
  hostnames:
    - acruet.home.bradandmarsha.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: acruet-user
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: acruet-user-https-redirect
  namespace: acruet
spec:
  parentRefs:
    - name: gateway-public
      namespace: kgateway-system
      sectionName: http
  hostnames:
    - acruet.home.bradandmarsha.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
