iac/kustomize/acruet/base/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acruet-admin-ingress
  namespace: acruet
  annotations:
    external-dns.alpha.kubernetes.io/hostname: acruet-admin.home.bradandmarsha.com
    index.home.bradandmarsha.com/enabled: "true"
    index.home.bradandmarsha.com/name: "A Cruet Admin"
    index.home.bradandmarsha.com/image: "https://media.home.bradandmarsha.com/media/acruet.png"
    index.home.bradandmarsha.com/description: "Administrator console for A Cruet"
    index.home.bradandmarsha.com/weight: "16"
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - acruet-admin.home.bradandmarsha.com
      secretName: acruet-admin-certificate
  rules:
    - host: acruet-admin.home.bradandmarsha.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acruet-admin
                port:
                  number: 8080
