iac/kustomize/acruet/base/ingress-user.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acruet-user-ingress
  namespace: acruet
  annotations:
    external-dns.alpha.kubernetes.io/hostname: acruet.home.bradandmarsha.com
    external-dns.alpha.kubernetes.io/target: home.bradandmarsha.com
    # Tomcat OIDC state lives in pod-local HTTP sessions; pin browsers to one pod.
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: acruet-user-route
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
    nginx.ingress.kubernetes.io/session-cookie-path: /
    index.home.bradandmarsha.com/enabled: "true"
    index.home.bradandmarsha.com/name: "A Cruet"
    index.home.bradandmarsha.com/image: "https://media.home.bradandmarsha.com/media/acruet-bw.jpg"
    index.home.bradandmarsha.com/description: "Envelope-budgeting web application"
    index.home.bradandmarsha.com/weight: "15"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - acruet.home.bradandmarsha.com
      secretName: acruet-user-certificate
  rules:
    - host: acruet.home.bradandmarsha.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acruet-user
                port:
                  number: 8080
